<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#141A33"
        android:elevation="12dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/txtTitle"
            style="@style/MainTextStyle"
            android:text="@string/title_text"
            android:textColor="@color/light_gray_txt_color"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtViewOutOf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/out_off_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#1B213A"
            app:cardCornerRadius="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewOutOf">

            <TextView
                android:id="@+id/txtQuestion"
                style="@style/MainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/question_text_padding"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnTrue"
            style="@style/ButtonStyle"
            android:layout_width="390dp"
            android:text="@string/true_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <Button
            android:id="@+id/btnFalse"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/false_button"
            android:textColor="#9A1212"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTrue"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btnNext"
            style="@style/ButtonStyle"
            android:layout_width="99dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:text="@string/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.881"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnFalse" />

        <TextView
            android:id="@+id/txtScore"
            style="@style/MainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toEndOf="@+id/txtViewOutOf"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

        <TextView
            android:id="@+id/txtHighest"
            style="@style/MainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/highest_score"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toEndOf="@+id/txtViewOutOf"
            app:layout_constraintTop_toBottomOf="@+id/txtScore" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>